Fixed issues with spacing, primarily in the call to action.

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@
     --quote-font-color: #1F2937;
 
     --container-width: 70%;
-    --container-max-width: 800px;
+    --container-max-width: 1000px;
 }
 
 * {
@@ -135,7 +135,7 @@ nav .nav-list {
     align-items: center;
     font-size: var(--hero-secondary-font-size);
     color: var(--hero-secondary-font-color);
-    margin: 40px 0;
+    margin: 40px 0 80px 0;
 }
 
 .info-section h2 {
@@ -200,6 +200,7 @@ nav .nav-list {
     display: flex;
     justify-content: center;
     padding: 40px 80px;
+    margin: 40px 0;
 }
 
 .cta-wrapper {
@@ -210,7 +211,7 @@ nav .nav-list {
     color: var(--hero-secondary-font-color);
     background-color: var(--cta-color);
     border-radius: 10px;
-    padding: 30px 60px;
+    padding: 40px 80px;
 }
 
 .cta-left, .cta-right {
@@ -221,6 +222,10 @@ nav .nav-list {
     font-weight: bold;
 }
 
+.cta-right {
+    margin-left: 120px;
+}
+
 .cta-right .cta-button {
     border: 2px solid var(--hero-main-font-color);
     width: 120px;
@@ -229,6 +234,10 @@ nav .nav-list {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.cta-right .cta-button:hover {
+    cursor: pointer;
 }
 
 .copyright {
